syntax = "proto3";

package single_and_stream;

service Greeter {
  rpc SayHello (HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest {
  string name = 1;
  string message = 2;
}

message HelloResponse {
  string message = 1;
}
